2022-04-17  Markus Gans  <guru.mail@muenster.de>
	* The FLineEdit and FTextView widgets got additional public methods for 
	  more control. Many thanks to Michael Lehn for the good suggestions

2022-03-01  Markus Gans  <guru.mail@muenster.de>
	* Bugfix: Since February 14, setting the input cursor for the virtual 
	  terminal did not work

2022-03-01  Markus Gans  <guru.mail@muenster.de>
	* A virtual window can now be placed above the virtual terminal

2022-02-14  Markus Gans  <guru.mail@muenster.de>
	* FVTerm::copyArea copies the data of the source area to the position 
	  of the destination area
	* FTermArea got methods to set the print position and to print data
	* Added examples/xpmview to view X PixMap (XPM) images in a terminal

2022-02-02  Markus Gans  <guru.mail@muenster.de>
	* Depending on the number of dialog windows, FDialogListMenu 
	  is now automatically enabled and disabled
	* FFileDialog now shows the file filter in the title bar

2022-01-29  Markus Gans  <guru.mail@muenster.de>
	* Minor bug fix for resizing dialogs
	* FTextView::FTextHighlight has received new constructors without 
	  length information. That allows to highlight text up to the end 
	  of the line

2022-01-21  Markus Gans  <guru.mail@muenster.de>
	* The trailing whitespaces in a FTextView line are now printed 
	  in the line buffer. This allows you to make text highlighting 
	  to the end of the line

2022-01-16  Markus Gans  <guru.mail@muenster.de>
	* Added examples/highlight-text to demonstrate text highlighting 
	  in FTextView

2022-01-15  Markus Gans  <guru.mail@muenster.de>
	* Add text highlighting for FTextView. 
	  Thanks to Michael Lehn for the idea

2022-01-12  Markus Gans  <guru.mail@muenster.de>
	* Dropdown menus are closed again on click outside the widget 
	  if there is no widget at that position 
	  (Broken since Nov 1, 2020)

2022-01-11  Markus Gans  <guru.mail@muenster.de>
	* Generalize the passing of the resize event to its parent dialog
